# ZEON-k8s-poetry-app

./: Dockerfile  README.md  deploy.ps1  deploy.sh  pyproject.toml
app/: config.py  main.py  models.py
k8s/: config.yaml  deployment.yaml  kustomization.yaml  secrets.yaml
