[tool.poetry]
name = "python-db-app"
version = "0.1.0"
description = "Simple Python application for database initialization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
